# swls-web

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
example/: another-worker.ts  index.html  index.ts  lsp-worker.js  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: channels.rs  client.rs  lib.rs
