[package]
name = "swls-wasm"
version = "0.2.2"
authors = ["ajuvercr <arthur.vercruysse@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.83"
serde-wasm-bindgen = "0.6.5"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = { version = "0.4.56", features = [
  "futures-core-03-stream",
] }
wasm-streams = "0.4.2"

bevy_ecs   = { version = "0.17.3", default-features = false, features = [
  "multi_threaded",
] }

futures = { version = "0.3.31", features = ["alloc", "executor"], default-features = false }
tower-lsp =  { version = "0.19.0", default-features = false, features = [ "runtime-agnostic" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["json"] }

pin-project = "1"

lang-jsonld = { path = "../swls/lang-jsonld/" }
lang-turtle = { path = "../swls/lang-turtle/" }
lang-sparql = { path = "../swls/lang-sparql/" }
lsp-core    = { path = "../swls/core/", default-features = false, features = [] }
once_cell = "1.21.3"
lazy_static = "1.5.0"

[dependencies.wasm-bindgen]
features = ["serde", "serde-serialize", "serde_json"]
version  = "0.2.106"

[dependencies.web-sys]
features = [
  "console",
  "HtmlTextAreaElement",
  "ReadableStream",
  "WritableStream",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
version = "0.3.83"


[dev-dependencies]
wasm-bindgen-test = "0.3.56"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

